fix: dashboard settings desc overflow

--- a/packages/umi-plugin-ui/src/plugins/dashboard/ui/setting.module.less
+++ b/packages/umi-plugin-ui/src/plugins/dashboard/ui/setting.module.less
@@ -6,6 +6,12 @@
   }
 }
 .list {
+  :global(.ant-list-item-meta) {
+    width: 80%;
+  }
+  :global(.ant-list-item-meta-content) {
+    width: 80%;
+  }
   :global(.ant-list-item-meta-title) {
     * {
       color: @text-color;
